Closed
Bug 71871
Opened 25 years ago
Closed 25 years ago
hierarchical history should group by day, not by age
Categories
(Core Graveyard :: History: Global, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9
People
(Reporter: alecf, Assigned: alecf)
Details
(Whiteboard: fix in hand)
Attachments
(1 file)
|
19.26 KB,
patch
|
Details | Diff | Splinter Review |
right now, the entries for "Today", "Yesterday" and so forth are grouped by age
- i.e. "Today" is all sites visited in the last 24 hours.
Instead, we should be actually showing sites listed today (i.e. since midnight
of the previous night) and so forth. This basically involves changing the way we
calculate the age in days...really simple fix, and involves some minor code
cleanup too..patch forthcoming
| Assignee | ||
Comment 1•25 years ago
|
||
my patch is blossoming into a fix for another bug. I'll file that one too...
Status: NEW → ASSIGNED
Priority: -- → P3
Whiteboard: fix in hand
Target Milestone: --- → mozilla0.9
| Assignee | ||
Comment 2•25 years ago
|
||
| Assignee | ||
Comment 3•25 years ago
|
||
that patch fixes this bug as well as bug 66907 (history doesn't update as you surf)
basically I did a few things:
- made a generic GetAgeInDays() which does local-time normalization, and used
that when calculating AgeInDays
The other stuff that's going on:
- added a bunch of extra notifications when you update a page in history.
- moved GetFindUriPrefix out to nsGlobalHistory so I could generate FindUris
from searchQueries easily.. also had to tweak it a bit so that I could still
cache a find uri prefix in the SearchEnumerator, and added an extra parameter so
that I could generate finduris that had a "groupby=<colname>" parameter.
- moved the search enumerator's RowMatches() function out to nsGlobalHistory, so
I could short-circuit HasAssertion, so I could avoid creating SearchEnumerators
every time I did a notification (speeds up the notifications when doing a
HasAssertion(find:<uri> --#child--> <url>) query
adding waterson for sr=, looking around for an r=
| Assignee | ||
Comment 4•25 years ago
|
||
adding shaver for a review
Comment 5•25 years ago
|
||
r=shaver. I'm never reviewing for you again.
| Assignee | ||
Comment 6•25 years ago
|
||
hee hee. That's one. Now I just need another suck^H^H^H^Hreviewer
| Assignee | ||
Comment 7•25 years ago
|
||
fix is in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 8•23 years ago
|
||
mass-verifying claudius' Fixed bugs which haven't changed since 2001.12.31.
if you think this particular bug is not fixed, please make sure of the following
before reopening:
a. retest with a *recent* trunk build.
b. query bugzilla to see if there's an existing, open bug (new, reopened,
assigned) that covers your issue.
c. if this does need to be reopened, make sure there are specific steps to
reproduce (unless already provided and up-to-date).
thanks!
[set your search string in mail to "AmbassadorKoshNaranek" to filter out these
messages.]
Status: RESOLVED → VERIFIED
Updated•8 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•