fix for bug 71871 - group history by day, not by age, by normalizing the AgeInDays property to the current local day's midnight. ... and bug 66906 - update history UI while surfing - this ensures that visited URIs get added to any open history windows/sidebars by asserting against all sorts of expected find URIs sr=shaver